hello batch script

--- a/README
+++ b/README
@@ -49,4 +49,4 @@
 %%%                                                                         %%%
 %%%-------------------------------------------------------------------------%%%
 
-run ./test to test conversion functions :-o
+run ./test to test conversion functions
