--- a/README
+++ b/README
@@ -7,7 +7,49 @@
 %%% Author      : H. Diedrich <hd2010@eonblast.com>                         %%%
 %%% Licence     : GPLv3                                                     %%%
 %%% Created     : 17 Apr 2010                                               %%%
-%%% Changed     : 12 May 2010                                               %%% 
+%%% Changed     : 25 May 2010                                               %%% 
+%%%-------------------------------------------------------------------------%%%
+%%%                                                                         %%%
+%%%   Erlvolt is an Erlang interface to a VoltDB server. It allows for      %%%
+%%%   Erlang programs to talk with the VoltDB server as VoltDB clients.     %%%
+%%%                                                                         %%%
+%%%-------------------------------------------------------------------------%%%
+%%%                                                                         %%%
+%%%   This API is being contributed to VoltDB by Eonblast Corporation.      %%%
+%%%                                                                         %%%
+%%%-------------------------------------------------------------------------%%%
+%%%                                                                         %%%
+%%%   STATUS                                                                %%%
+%%%                                                                         %%%
+%%%   All basic functionality is implemented and unit tested. Test pro-     %%%
+%%%   grams are being written to test usability. Function signatures are    %%%
+%%%   yet to change mildly. Asynchronous calls are not yet supported.       %%%
+%%%                                                                         %%%
+%%%   REQUIREMENTS                                                          %%%
+%%%                                                                         %%%
+%%%   + VoltDB 1.0.01                                                       %%%
+%%%   + Tested on Java 1.6.0-17 (use -18+)                                  %%%
+%%%   + Tested on Erlang R13B01                                             %%%
+%%%                                                                         %%%
+%%%   TESTS                                                                 %%%
+%%%                                                                         %%%
+%%%   + Have at least Erlang R12B-4                                         %%%
+%%%   + Get Erlunit from http://github.com/Eonblast/Erlunit/tarball/master  %%%
+%%%     and put it into subfolder erlunit, inside your Erlvolt folder.      %%%
+%%%   + From the OS command line run ./test                                 %%%
+%%%                                                                         %%%
+%%%   SAMPLE                                                                %%%
+%%%                                                                         %%%
+%%%   + From the OS command line run ./hello                                %%% 
+%%%                                                                         %%%
+%%%   DOCS                                                                  %%%
+%%%                                                                         %%%
+%%%   + point your browser to doc/index.html                                %%% 
+%%%                                                                         %%%
+%%%-------------------------------------------------------------------------%%%
+%%%                                                                         %%%
+%%%     Erlvolt is used for Solar Pirates http://www.eonblast.com.          %%%
+%%%                                                                         %%%
 %%%-------------------------------------------------------------------------%%%
 %%%                                                                         %%%
 %%%   THE FUTURE:                                                           %%%
@@ -49,4 +91,4 @@
 %%%                                                                         %%%
 %%%-------------------------------------------------------------------------%%%
 
-run ./test to test conversion functions
+
