--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 %%%-------------------------------------------------------------------------%%%
 %%% File        : README                                                    %%% 
-%%% Version     : 0.1.02/alpha                                              %%%
+%%% Version     : 0.1.03/alpha                                              %%%
 %%% Description : Erlang-VoltDB client API                                  %%%
 %%% Copyright   : VoltDB, LLC - http://www.voltdb.com                       %%%
 %%% Production  : Eonblast Corporation - http://www.eonblast.com            %%%
 %%% Author      : H. Diedrich <hd2010@eonblast.com>                         %%%
-%%% Licence     : GPLv3                                                     %%%
+%%% License     : GPLv3                                                     %%%
 %%% Created     : 17 Apr 2010                                               %%%
 %%% Changed     : 25 May 2010                                               %%% 
 %%%-------------------------------------------------------------------------%%%
@@ -72,7 +72,7 @@
 %%%                                                                         %%%
 %%%-------------------------------------------------------------------------%%%
 %%%                                                                         %%%
-%%%    Erlvolt 0.1.02/alpha - an Erlang-VoltDB client API.                  %%%
+%%%    Erlvolt 0.1.03/alpha - an Erlang-VoltDB client API.                  %%%
 %%%    Copyright (C) 2010 VoltDB, LLC http://www.voltdb.com                 %%%
 %%%    Author H. Diedrich <hd2010@eonblast.com> http://www.eonblast.com     %%%
 %%%                                                                         %%%
