--- a/CHANGES
+++ b/CHANGES
@@ -1,18 +1,25 @@
 %%%-------------------------------------------------------------------------%%%
 %%% File        : CHANGES                                                   %%%
-%%% Version     : 0.1.03/alpha                                              %%%
+%%% Version     : 0.2.01/alpha                                              %%%
 %%% Description : List of source code changes of Erlvolt                    %%%
 %%% Copyright   : VoltDB, LLC - http://www.voltdb.com                       %%%
 %%% Production  : Eonblast Corporation - http://www.eonblast.com            %%%
 %%% Author      : H. Diedrich - <hd2010@eonblast.com>                       %%%
 %%% License     : GPLv3 - see LICENSE                                       %%%
 %%% Created     : 12 May 2010                                               %%%
-%%% Changed     : 11 Jun 2010                                               %%%
+%%% Changed     : 15 Jun 2010                                               %%%
 %%%-------------------------------------------------------------------------%%%
 
 
+0.2.01  15 Jun 2010
 
-0.1.03  11 Jun 2010 
+        + add: extensive tests for callback id list (test3.erl)
+        + alt: changes in heads and body of callProcedure, now w/callback
+        + ext: connection record replaces socket-only parameter
+        + add: close(Connection) added, and added to all samples.
+        
+
+0.1.03  11 Jun 2010 r33
 
         + ext: default encoding of array, (binary) string and integer parameters 
         + alt: default parameter encoding attempt of any type as string dropped
